apigate/tests/ui/fail/raw_body_in_hook.rs
#[apigate::hook]
async fn bad(raw: apigate::RawBody) -> apigate::HookResult {
    let _ = raw;
    Ok(())
}

fn main() {}
